# isobar

./: .env  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
auxiliary/scripts/: generate-docs.py
docs/: musical-overview.md
examples/: 00.ex-hello-world.py  01.ex-basics.py  02.ex-subsequence.py  03.ex-euclidean.py  04.ex-permutations.py  05.ex-piano-phase.py  06.ex-walk.py  07.ex-static-pattern.py  10.ex-lsystem-stochastic.py  11.ex-lsystem-rhythm.py  20.ex-midi-input.py  21.ex-midi-clock-sync-in.py  22.ex-midi-markov-learner.py  23.ex-midi-monitor.py  24.ex-link-clock.py  30.ex-midifile-read.py  31.ex-midifile-write.py  32.ex-midifile-markov.py  40.ex-osc-send.py
examples/fluid-synth/: 01.ex-fluid-synth.py
examples/signalflow/: 01.example-signalflow-create-patch.py  02.example-signalflow-modify-patch.py  03.example-signalflow-trigger-patch.py
isobar/: key.py  util.py
isobar/globals/: sync.py
isobar/io/: __init__.py
isobar/io/cv/: output.py
isobar/io/netglobals/: receiver.py
isobar/io/signalflow/: output.py
isobar/pattern/: chance.py  core.py  fade.py  markov.py
isobar/timelines/: clock.py  track.py
isobar/timelines/events/: midi_note.py  signalflow.py
tests/: test_key.py  test_pattern.py  test_pattern_scalar.py  test_timeline_clock.py  test_util.py
