[project]
name = "isobar"
version = "0.2.1"
description = "A Python library to express and manipulate musical patterns"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "python-osc",
  "mido",
  "python-rtmidi",
  "LinkPython-extern",
  "numpy",
]

[project.optional-dependencies]
signalflow = [
  "signalflow @ git+https://github.com/ideoforms/signalflow.git"
]

[dependency-groups]
# Consolidated development group for uv (tests + lint)
dev = [
  "pytest>=8.4.2",
  "ruff>=0.14.2",
]

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]
